# rsomics-peak-annotate

./: Cargo.toml  README.md
src/: annotate.rs  cli.rs  gtf.rs  lib.rs  model.rs
tests/: compat.rs
tests/golden/: anno.gtf  golden.tsv  make_fixture.py  peaks.bed  run_chipseeker.R
